# row_segmentation

./: .gitignore  CMakeLists.txt  README.md  generate_training_data_hsv_yuv.py  generate_training_data_lines.py  generate_training_dataset.py  test_cnn_predict.py  test_filtering.py  test_images.py  test_ransac.py  test_utils.py  test_video.py
exported/: .~lock.small_set_training_log_hsv.csv#  exported_training_log.csv  small_set_training_log.csv  small_set_training_log_hsv.csv  test_training_log_hsv.csv  validate_training_log.csv  validate_training_log_hsv.csv
include/: color_filtering_utils.h  image_processing_utils.h  vision_line_extractor.h
include/algorithms/: ransaclinefitter.h
include/base/: definitions.h  histogram.h  line.h  sliding_window.h
include/filters/: color_filter.h  filter_pipeline.h  line_filter.h
include/utils/: color_filtering_utils.h  image_processing_utils.h  pointcloud_utils.h
src/: CMakeLists.txt  image_processing_utils.cpp  process_image.cpp
src/algorithms/: ransaclinefitter.cpp
src/filters/: color_filter.cpp  filter_pipeline.cpp
training/: cnn_train.py  cnn_train_hsv.py  train_hsv.sh
training/scenarios/: rename_imgs.py
utils/: __init__.py  cnn_utils.py  contour_utils.py  filter_utils.py  hsv_color_filter.py  line_utils.py  misc_utils.py  seg_utils.py  utils.py
